Removed Nav Model and Orders Prototype

--- a/CodeCafe/Views/Product/List.cshtml
+++ b/CodeCafe/Views/Product/List.cshtml
@@ -1,10 +1,42 @@
 ﻿@model ProductListViewModel
 
 @{ 
-	ViewData["Title"] = " | Book Catalog";
-	
+	ViewData["Title"] = " | Coffee Menu";
+
 }
 
 <html>
-
+<body>
+	<h1>Menu</h1>
+	<div class="card-deck">
+		<div class="card">
+			<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
+			<div class="card-body">
+				<h5 class="card-title">Coffee</h5>
+				<p class="card-text">Great for a cold day.</p>
+			</div>
+		</div>
+		<div class="card">
+			<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
+			<div class="card-body">
+				<h5 class="card-title">Coffee</h5>
+				<p class="card-text">Great for a cold day.</p>
+			</div>
+		</div>
+		<div class="card">
+			<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
+			<div class="card-body">
+				<h5 class="card-title">Coffee</h5>
+				<p class="card-text">Great for a cold day.</p>
+			</div>
+		</div>
+		<div class="card">
+			<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
+			<div class="card-body">
+				<h5 class="card-title">Coffee</h5>
+				<p class="card-text">Great for a cold day.</p>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
