--- a/CodeCafe/wwwroot/css/site.css
+++ b/CodeCafe/wwwroot/css/site.css
@@ -1,11 +1,12 @@
-﻿.container {
+﻿.card {display:inline-block;}
+
+.container {
 	text-align: center;
 	border-radius: 30px;
 }
 
 .navbar navbar-expand-xl {
-	text-align: center;
-	
+	text-align: center;	
 }
 
 nav div ul a {
