--- a/CodeCafe/Views/Home/Index.cshtml
+++ b/CodeCafe/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
 
 <div class="text-center">
 	<h1>Welcome to Code Cafe!</h1>
+	<div class="small">
+		<img src="~/images/banner.png" />
+	</div>
 	<ul class="list-group">
-
 	</ul>
 </div>
