--- a/CodeCafe/Views/Product/List.cshtml
+++ b/CodeCafe/Views/Product/List.cshtml
@@ -9,34 +9,18 @@
 <body>
 	<h1>Menu</h1>
 	<div class="card-deck">
-		<div class="card">
-			<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
-			<div class="card-body">
-				<h5 class="card-title">Coffee</h5>
-				<p class="card-text">Great for a cold day.</p>
+		@foreach (Product product in Model.Products)
+		{
+			<div class="card">
+				<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
+				<div class="card-body">
+					<h5 class="card-title">@product.ProductName</h5>
+					<h6 class="card-header">$@product.Price</h6>
+					<p class="card-text">@product.Description</p>
+					<button type="button" class="btn btn-outline-secondary">Add to Cart</button>
+				</div>
 			</div>
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
-			<div class="card-body">
-				<h5 class="card-title">Coffee</h5>
-				<p class="card-text">Great for a cold day.</p>
-			</div>
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
-			<div class="card-body">
-				<h5 class="card-title">Coffee</h5>
-				<p class="card-text">Great for a cold day.</p>
-			</div>
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
-			<div class="card-body">
-				<h5 class="card-title">Coffee</h5>
-				<p class="card-text">Great for a cold day.</p>
-			</div>
-		</div>
+		}
 	</div>
 </body>
 </html>
