--- a/CodeCafe/Views/Shared/_Layout.cshtml
+++ b/CodeCafe/Views/Shared/_Layout.cshtml
@@ -18,8 +18,9 @@
 <body>
 	<div class="container">
 		<a asp-action="Index" asp-controller="Home">
-			<img src="~/images/logo.png" class="img-fluid-block" width="100"/>
+			<img src="~/images/logonotext.png" class="img-fluid-block" width="100" />
 		</a>
+		<h1>CODE CAFE</h1>
 		<nav class="navbar navbar-expand-xl bg-dark">
 			<button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#menu"
 					aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +61,6 @@
 				</ul>
 			</div>
 		</nav>
-
 		@RenderBody()
 	</div>
 </body>
