--- a/CodeCafe/Views/Product/List.cshtml
+++ b/CodeCafe/Views/Product/List.cshtml
@@ -12,8 +12,8 @@
 		@foreach (Product product in Model.Products)
 		{
 			<div class="card">
-				<img class="card-img-top" src="/images/logonotext.png" alt="Coffee" />
 				<div class="card-body">
+					<img class="card-img-top" src="@product.Image" alt="Coffee" />
 					<h5 class="card-title">@product.ProductName</h5>
 					<h6 class="card-header">$@product.Price</h6>
 					<p class="card-text">@product.Description</p>
