--- a/CodeCafe/Views/Product/List.cshtml
+++ b/CodeCafe/Views/Product/List.cshtml
@@ -17,7 +17,10 @@
 					<h5 class="card-title">@product.ProductName</h5>
 					<h6 class="card-header">$@product.Price</h6>
 					<p class="card-text">@product.Description</p>
-					<button type="button" class="btn btn-outline-secondary">Add to Cart</button>
+					<button type="button" class="btn btn-outline-secondary">
+						
+						Add to Cart
+					</button>
 				</div>
 			</div>
 		}
