--- a/CodeCafe/Views/Shared/_Layout.cshtml
+++ b/CodeCafe/Views/Shared/_Layout.cshtml
@@ -68,6 +68,12 @@
 							Contact
 						</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" asp-action="Index" asp-controller="Cart" asp-area="">
+							<span class="fas fa-cart-plus"></span>&nbsp;
+							Cart
+						</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
