--- a/CodeCafe/Views/Cart/Checkout.cshtml
+++ b/CodeCafe/Views/Cart/Checkout.cshtml
@@ -1,31 +1,51 @@
 ﻿@model CodeCafe.Models.ViewModels.RegistrationViewModel
+
 @{
-    ViewData["Title"] = "Checkout";
+    ViewData["Title"] = "Registration";
 }
+
+@section scripts {
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/js/site.js"></script>
+}
+
 
 <h1>Place your order!</h1>
 <br />
-<form asp-action="Index">
-    <div class="form-group row" style="justify-content: center;">
+<form asp-action="Index" method="post">
+    <div class="form-group row">
         <div class="col-sm-2"><label>Name:</label></div>
         <div class="col-sm-4">
             <input asp-for="Name" class="form-control" />
         </div>
+        <div class="col">
+            <span asp-validation-for="Name" class="text-danger">
+            </span>
+        </div>
     </div>
-    <div class="form-group row" style="justify-content: center;">
+    <div class="form-group row">
         <div class="col-sm-2"><label>Email Address:</label></div>
         <div class="col-sm-4">
             <input asp-for="Email" class="form-control" />
         </div>
+        <div class="col">
+            <span asp-validation-for="Email" class="text-danger">
+            </span>
+        </div>
     </div>
-    <div class="form-group row" style="justify-content: center;">
+    <div class="form-group row">
         <div class="col-sm-2"><label>Phone Number:</label></div>
         <div class="col-sm-4">
             <input asp-for="PhoneNumber" class="form-control" />
         </div>
+        <div class="col">
+            <span asp-validation-for="PhoneNumber" class="text-danger">
+            </span>
+        </div>
     </div>
-    <div class="form-group row" style="justify-content: center;">
-        <div class="col-sm-2"><label>Pick Up Time:</label></div>
+    <div class="form-group row">
+        <div class="col-sm-2"><label>Pick up time:</label></div>
         <select asp-for="Hour" class="form-control col-sm-1">
             <option></option>
             <option>09</option>
@@ -57,10 +77,9 @@
             <option>55</option>
         </select>
     </div>
-    <div class="row" style="justify-content: center;">
+    <div class="row">
         <div class="offset-2 col-sm-4">
             <button type="submit" class="btn btn-outline-secondary">Submit</button>
         </div>
     </div>
 </form>
-</div>
