--- a/CodeCafe/Views/Shared/_Layout.cshtml
+++ b/CodeCafe/Views/Shared/_Layout.cshtml
@@ -41,8 +41,9 @@
 <body>
     <div class="container">
         <a asp-action="Index" asp-controller="Home">
-            <img src="~/images/logo.png" class="img-fluid-block" width="100" />
+            <img src="~/images/logonotext.png" class="img-fluid-block" width="100" />
         </a>
+        <h1>Code Cafe</h1>
         <nav class="navbar navbar-expand-xl bg-dark">
             <div class="navbar">
                 <ul>
