--- a/CodeCafe/wwwroot/css/site.css
+++ b/CodeCafe/wwwroot/css/site.css
@@ -1,14 +1,15 @@
 ﻿.card {display:inline-block;}
-
-.container {
-	text-align: center;
-	border-radius: 30px;
+@media (max-width: 768px){
+	.carousel-inner img {
+		width: 100%;
+		height: 100%;
+		justify-content: center;
+	}
 }
 
-nav div ul a {
-	color: white;
-}
 
-nav div ul a:hover {
-	color: yellow;
-}
+/*.carousel-caption {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%)
+}*/
