Background Image Test

--- a/CodeCafe/Views/Home/Index.cshtml
+++ b/CodeCafe/Views/Home/Index.cshtml
@@ -1,5 +1,29 @@
 ﻿@model OrderItem
 
-<div class="text-center">
-	<h1>Home</h1>
+<div id="slide" class="carousel slide" data-ride="carousel">
+	<ul class="carousel-indicators">
+		<li data-target="#slide" data-slide-to="0" class="active"></li>
+		<li data-target="#slide" data-slide-to="1"></li>
+		<li data-target="#slide" data-slide-to="2"></li>
+	</ul>
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img src="~/images/background.png" />
+			<div class="carousel-caption">
+				<h1 class="display-2">Code Cafe</h1>
+			</div>
+		</div>
+		<div class="carousel-item">
+			<img src="~/images/background2.png" />
+			<div class="carousel-caption">
+				<h1 class="display-2">Code Cafe</h1>
+			</div>
+		</div>
+		<div class="carousel-item">
+			<img src="~/images/background3.png" />
+			<div class="carousel-caption">
+				<h1 class="display-2">Code Cafe</h1>
+			</div>
+		</div>
+	</div>
 </div>
