--- a/CodeCafe/Views/Shared/_Layout.cshtml
+++ b/CodeCafe/Views/Shared/_Layout.cshtml
@@ -43,10 +43,10 @@
 				<img src="~/images/logonotext.png" width="50" />
 			</a>
 			<button class="navbar-toggler" type="button"
-					data-toggle="collapse" data-target="navbarResponsive">
+					data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
+			<div class="collapse navbar-collapse" id="#navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
 						<a class="nav-link" asp-action="Index" asp-controller="Home" asp-area="">
