--- a/CodeCafe/Views/Home/Index.cshtml
+++ b/CodeCafe/Views/Home/Index.cshtml
@@ -1,29 +1,41 @@
 ﻿@model OrderItem
-
+<style>
+	.carousel-inner img {
+		margin: auto;
+	}
+</style>
+<!-- Image Slider -->
 <div id="slide" class="carousel slide" data-ride="carousel">
-	<ul class="carousel-indicators">
+	<ul class="carousel-indicators d-flex justify-content-center">
 		<li data-target="#slide" data-slide-to="0" class="active"></li>
 		<li data-target="#slide" data-slide-to="1"></li>
-		<li data-target="#slide" data-slide-to="2"></li>
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="~/images/background.png" />
+			<img class="d-block w-100" src="~/images/background.png" />
 			<div class="carousel-caption">
 				<h1 class="display-2">Code Cafe</h1>
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img src="~/images/background2.png" />
+			<img class="d-block w-100" src="~/images/background2.png" />
 			<div class="carousel-caption">
 				<h1 class="display-2">Code Cafe</h1>
 			</div>
 		</div>
-		<div class="carousel-item">
-			<img src="~/images/background3.png" />
-			<div class="carousel-caption">
-				<h1 class="display-2">Code Cafe</h1>
-			</div>
-		</div>
+	</div>
+</div>
+
+<!-- Jumbotron -->
+<div class="container-fluid">
+	<div class="row jumbotron">
+		<!-- For small screens take all 12 columns, larger can be 9 or 10 -->
+		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10"></div>
+		<p class="lead">
+			Our coffee is served with the intent to provide a better than
+			satisfactory experience. Each cup should be a reflection of high
+			quality, warm, delicious coffee. Expect development productivity
+			when you buy a cup of our warm coffee today!
+		</p>
 	</div>
 </div>
