--- a/CodeCafe/wwwroot/css/site.css
+++ b/CodeCafe/wwwroot/css/site.css
@@ -1,14 +1,20 @@
 ﻿.card {display:inline-block;}
-@media (max-width: 768px){
-	.carousel-inner img {
-		width: 100%;
-		height: 100%;
-		justify-content: center;
-	}
+
+#slide {
+	justify-content: center;
+	text-align: center;
 }
 
+/*.carousel-inner div img {
+	margin-left: auto;
+	margin-right: auto;
+}
 
-/*.carousel-caption {
+@media (max-width: 768px){
+
+}
+
+.carousel-caption {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%)
