Updated session state, database, and views

--- a/CodeCafe/Views/About/Index.cshtml
+++ b/CodeCafe/Views/About/Index.cshtml
@@ -30,19 +30,11 @@
 		come from reputable producers who use natural ingredients, humane techniques, and are praised for their quality.
 	</p><br />
 
-	<div class="card-deck m-3">
-		<div class="card">
-			<h3>Eric Stalcup</h3>
-		</div>
-		<div class="card">
-			<h3>Gage Decker</h3>
-		</div>
-		<div class="card">
-			<h3>Leia Decker</h3>
-		</div>
-		<div class="card">
-			<h3>Rawley Collins</h3>
-		</div>
-	</div>
+	<h1>Contact Us</h1>
+	<p>Email us at codecafe@fakemail.com</p>
+	<p>Call us at 515-210-0000</p>
+	<p>Visit us at:</p>
+	<p>1007 E Grand Ave.</p>
+	<p>Des Moines, IA 50319</p>
 </body>
 </html>
