Local Database, and Order View Centered

--- a/CodeCafe/Views/Product/List.cshtml
+++ b/CodeCafe/Views/Product/List.cshtml
@@ -8,7 +8,7 @@
 <html>
 <body>
 	<h1 style="text-align: center;">Menu</h1>
-	<div class="card-deck" style="text-align: center;">
+	<div class="card-deck" style="justify-content: center;">
 		@foreach (Product product in Model.Products)
 		{
 			<form asp-action="Add" asp-controller="Cart" method="post">
