Updated Order Page

--- a/CodeCafe/Views/Product/List.cshtml
+++ b/CodeCafe/Views/Product/List.cshtml
@@ -6,19 +6,22 @@
 }
 
 <html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
 	<h1 style="text-align: center;">Menu</h1>
-	<div class="card-deck" style="text-align: center;">
+	<div class="card-deck" style="justify-content: center;">
 		@foreach (Product product in Model.Products)
 		{
 			<form asp-action="Add" asp-controller="Cart" method="post">
-				<div class="card" style="text-align: center;" >
+				<div class="card" style="text-align: center;" width="30%">
 					<img class="card-img-top" />
 					<div class="card-body">
 						<img class="card-img-top" src="@product.Image" alt="Coffee"/>
 						<h5 class="card-title">@product.ProductName</h5>
 						<h6 class="card-header">$@product.Price</h6>
-						<p class="card-text">@product.Description</p>
+						<p class="card-text" style="word-wrap: break-word;">@product.Description</p>
 						<button type="submit" name="id" value="@product.ProductId" class="btn btn-outline-secondary">Add to Cart</button>
 					</div>
 				</div>
