--- a/CodeCafe/Views/Cart/Checkout.cshtml
+++ b/CodeCafe/Views/Cart/Checkout.cshtml
@@ -79,7 +79,7 @@
     </div>
     <div class="row">
         <div class="offset-2 col-sm-4">
-            <button asp-action="ThankYou" asp-controller="Cart" type="submit" class="btn btn-primary">Submit</button>
+            <button asp-action="ThankYou" asp-controller="Cart" type="submit" class="btn btn-outline-secondary">Submit</button>
         </div>
     </div>
 </form>
